--- a/readme
+++ b/readme
@@ -1,8 +1,9 @@
-Download and install "Zeta.apk" in your Android device. Allow installation from unknown sources, if prompted.
+#Download and install "Zeta.apk" in your Android device. Allow installation from unknown sources, if prompted.
 
-Source code available on: https://github.com/rajansaini8877/Zeta
 
-Hardware/Software Requirements:
+
+  
+  Hardware/Software Requirements:
 
 * Android 5.0 and later device.
 * 512 mb RAM free.
